# MQD-

./: .env.example  .gitignore  AGENTS.md  CheckFlow MVP 开发任务拆分 v1 0 38e75a5befd780778d1ef8bdd4cd1e65.md  CheckFlow 后端 API 设计 v0 1.md .md  CheckFlow 数据库设计 v1 0.md  CheckFlow 状态机设计 v0 1 38e75a5befd780dd9656d2f830f35f3e.md  CheckFlow 系统架构设计 v1.md  CheckFlow 领域模型设计 v1 0.md  CheckFlow_原型.html  DESIGN.md  PRODUCT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  企业办公_点检AI方案设计.md
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  main.py  seed.py  vdrive.py
backend/tests/: test_alembic_migrations.py  test_auth_permissions.py  test_auth_security.py  test_database_constraints.py  test_enums.py  test_p0_main_flow.py  test_seed_data.py  test_service_boundaries.py  test_vdrive_candidate_files.py
doc/tasks/: 00-project-bootstrap.md  01-database-orm.md  02-auth-user-permission.md  03-project-management.md  04-vdrive-link-validation.md  05-rule-config-versioning.md  06-inspection-task-creation.md  07-rule-snapshot.md  08-round-item-generation.md  09-inspection-item-confirmation.md  10-round-archive.md  11-report-generation.md  12-rectification-followup.md  13-recheck.md  14-report-correction.md  15-vdrive-scan.md  16-file-existence-autocheck.md  17-dashboard-query.md  18-file-content-parsing.md  19-system-direct-check.md  20-export.md  progress.md
docs/: frontend-field-reconciliation.md
frontend/: next-env.d.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts
scripts/: dev_down.sh  dev_status.sh  dev_up.sh
(+45 files in other folders)
